# asteroid-game

./: Cargo.toml  README_PROCESO.md  README_RESUMEN.md  README_TODO.md
assets/: Asteroid_1.glb  Rocky_Asteroid_2.glb  Rocky_Asteroid_3.glb  Rocky_Asteroid_4.glb  Rocky_Asteroid_5.glb  Rocky_Asteroid_6.glb  spaceship.blend  spaceship.fbx  spaceship.glb
src/: assets.rs  asteroids.rs  camera.rs  collision.rs  components.rs  constants.rs  debug_axes.rs  enemy.rs  laser.rs  main.rs  materials.rs  particles.rs  player.rs  starfield.rs  ufo.rs  ui.rs
src/asteroids/: colors.rs  mod.rs  movement.rs  spawn.rs  splitting.rs
src/collision/: body_hits.rs  laser_hits.rs  mod.rs  victory.rs
src/components/: asteroid.rs  enemy.rs  laser.rs  mod.rs  player.rs  shared.rs  ufo.rs
src/debug/: axes.rs  colliders.rs  mod.rs
src/enemy/: ai.rs  mod.rs  spawn.rs
src/player/: mod.rs  movement.rs  shooting.rs  spawn.rs
src/ufo/: ai.rs  spawn.rs
src/ui/: hud.rs  menu.rs  mod.rs  screens.rs
